RESOLVED FIXED278593
REGRESSION(276827@main): Large animated images are always decoded asynchronously
https://bugs.webkit.org/show_bug.cgi?id=278593
Summary REGRESSION(276827@main): Large animated images are always decoded asynchronously
Said Abou-Hallawa
Reported 2024-08-23 17:43:35 PDT
The decoding should be controlled by the setting "AnimatedImageAsyncDecodingEnabled". But this regression only affects debugging the asynchronous image decoding because "AnimatedImageAsyncDecodingEnabled" is set to true by default.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-23 17:44:12 PDT
Said Abou-Hallawa
Comment 2 2024-08-23 17:56:15 PDT
EWS
Comment 3 2024-09-17 00:24:10 PDT
Committed 283753@main (a3254962b06e): <https://commits.webkit.org/283753@main> Reviewed commits have been landed. Closing PR #32657 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.