REGRESSION(/276827@main): Large animated images are always decoded asynchronously https://bugs.webkit.org/show_bug.cgi?id=278593 rdar://134597661

Reviewed by Simon Fraser.

The large animated images should be decoded asynchronously if the setting
AnimatedImageAsyncDecodingEnabled is true. The only exception is the first frame
has to be decoded synchronously only for the first time.

* LayoutTests/fast/images/async-image-large-animated-disabled-expected.txt: Added.
* LayoutTests/fast/images/async-image-large-animated-disabled.html: Added.
* LayoutTests/fast/images/resources/animated-red-green-blue-400x400.gif: Added.
* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::startAnimation):
(WebCore::BitmapImageSource::imageFrameDecodeAtIndexHasFinished):
(WebCore::BitmapImageSource::cacheNativeImageAtIndex):
(WebCore::BitmapImageSource::currentNativeImageForDrawing):
* Source/WebCore/rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::decodingModeForImageDraw const):

Canonical link: https://commits.webkit.org/283753@main